adding mroe eula

--- a/eula.html
+++ b/eula.html
@@ -15,7 +15,7 @@
 <body>
     <div class="text-center mt-20">
         <h1 class="text-3xl font-thin tracking-tight prose-sm prose prose-slate mx-auto">Nudge: Places &amp; Activities</h1>
-        <h1 class="text-5xl font-extrabold tracking-tight text-slate-900">Privacy policy</h1>
+        <h1 class="text-5xl font-extrabold tracking-tight text-slate-900">End User License Agreement</h1>
         <div class="mx-auto max-w-4xl mb-10">
             <div class="prose-slate text-wrap whitespace-pre mt-14 text-center mx-auto text-gray-100" style="color: var(--tw-prose-body)">Privacy Policy for Nudge
 
