--- a/eula.html
+++ b/eula.html
@@ -23,7 +23,7 @@
 
                 Last Updated: March 16th, 2025
                 
-                This User Generated Content End User License Agreement ("Agreement") is a binding legal contract between you ("User" or "you") and [Your Company Name] ("Company," "we," "us," or "our") regarding your use of the Nudge mobile application ("App") available on the Apple App Store. By accessing or using the App, or by submitting, uploading, or otherwise providing any content ("User Content") to the App, you agree to be bound by the terms of this Agreement. If you do not agree with these terms, do not use or access the App.
+                This User Generated Content End User License Agreement ("Agreement") is a binding legal contract between you ("User" or "you") and Nudge ("Company," "we," "us," or "our") regarding your use of the Nudge mobile application ("App") available on the Apple App Store. By accessing or using the App, or by submitting, uploading, or otherwise providing any content ("User Content") to the App, you agree to be bound by the terms of this Agreement. If you do not agree with these terms, do not use or access the App.
                 
                 1. Definitions
                 "App" refers to Nudge, the mobile application provided by the Company that aggregates and displays swipeable places to help users find things to do near them, including content pulled from both user submissions and internet sources.
